--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
 
-    <meta name="author" content="Lucas-Wye">
+    <meta name="author" content="Chenhao">
     <meta name="application-name" content="notebook">
     <meta name="keywords" content="linux学习，mac教程，Hello, welcome to my personal website">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -74,7 +74,7 @@
                 <div class="profile-section pt-3 pt-lg-0">
                     <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image" >			
                     
-                    <div class="bio mb-3">Hello, welcome to Wye's space. This is a website for personal learning notes and some interesting things.</div><!--//bio-->
+                    <div class="bio mb-3">Hello, welcome to Ch's space. This is a website for personal learning notes and some interesting things.</div><!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="https://github.com/Lucas-Wye"><i class="fab fa-github-alt fa-fw"></i></a></li>
                     </ul><!--//social-list-->
